apps/anubis/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: anubis
  namespace: anubis
  labels:
    app.kubernetes.io/name: anubis
    app.kubernetes.io/part-of: ingress-protection
spec:
  selector:
    app.kubernetes.io/name: anubis
  ports:
    - port: 8080
      targetPort: 8080
